# Impact-of-Data-Ranking-on-Training-Dynamics

./: Analiza Teoretyczna Metryki VoG.pptx  README.md  main.py  pyproject.toml
